# patch-usage-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/patch_usage_mcp/: __init__.py  __main__.py  analytics.py  client.py  server.py
tests/: test_analytics.py  test_client.py  test_server_guards.py
