[project]
name = "patch-usage-mcp"
version = "0.1.0"
description = "MCP server exposing Patch (oai.joinpatch.org) API usage to Claude"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[project.scripts]
patch-usage-mcp = "patch_usage_mcp.server:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/patch_usage_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
